<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/bgColor"
    tools:context="com.example.hoommaah.calculator.MainActivity">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/calculatorTable"
        android:layout_alignParentBottom="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/inputRow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/inputView"
                android:text="@string/hello"
                android:textSize="50sp"
                android:gravity="right"
                android:textColor="@color/inputTextColor"
                android:textAppearance="@android:style/TextAppearance.Material.Large" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow1">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/clearButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/parenthesis"
                    android:textSize="50sp"
                    android:layout_weight="1"
                    android:text="@string/parenthesis" />

                <Button
                    android:text="@string/percent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/percentButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/divide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/divideButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow2">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/eightButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nineButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sevenButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/multiply"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/multiplyButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow3">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/five"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fiveButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/six"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sixButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minusButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow4" >

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/oneButon"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/twoButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/threeButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/plus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/plusButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRow5">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:text="@string/decimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/decimalButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/zero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/zeroButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/plusMinus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/plusMinusButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />

                <Button
                    android:text="@string/equal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/equalButton"
                    android:textSize="50sp"
                    android:layout_weight="1" />
            </LinearLayout>

        </TableRow>
    </TableLayout>
</RelativeLayout>
